# DT_sensing_fusion_WIFI5G

./: .gitignore  README.md  README_5G_SSB_PYTHON_DEPLOYMENT.md  README_WIFI_BEACON_CSI.md  README_online_python_5g.md  README_online_ssB_empty_p5.md  run_datassb_block.sh  run_online_5g_binary_json_scp.sh  run_python_matlab_interleaved_capture.sh  run_ssb_session.sh
apps/waveform_rx/: offline_waveform_pipeline.cpp  offline_wifi_decode.cpp  online_waveform_pipeline.cpp  test_uhd_iq_source.cpp
config/: generic_5g_binary_model.json  map_zones.json  sensing_config.json  sionna_mitsuba_position_map.json  target_ssb.json  wifi_beacon_sensing.json
configs/pipelines/: wifi_beacon_offline.json  wifi_beacon_online.json  wifi_beacon_tx.json
configs/waveforms/: waveform_types.json  wifi_beacon_ch11.json
docs/: DATASET_MODEL_JSON_GUIDE.md  DEVELOPMENT_AND_CLEANUP.md  REALTIME_CSI.md  RUNBOOK.md  RUNBOOK_PYTHON_ONLINE_5G.md  WIFI_BEACON_CSI_PIPELINE.md
docs/waveforms/: feature_frame.md
legacy/config_experiments/: wifi_beacon_online_threshold070.json  wifi_beacon_online_threshold085.json
legacy/wifi_matlab_prototypes/: count_my_beacons_usrp.m  count_own_wifi_beacons_usrp.m  decode_and_save_my_beacons_sc16.m  decode_my_beacons_sc16.m  decode_my_beacons_sc16_chunked.m  detect_own_beacons_matched.m  listen_wifi_ssids_usrp.m  receive_usrp_tone.m  receive_wifi_beacon_spectrum.m  scan_wifi_beacons_usrp.m
legacy/wifi_python_prototypes/docs/: PYTHON_WIFI_RX_V2.md
legacy/wifi_python_prototypes/receivers/: rx_wifi_beacon_csi_usrp.py  rx_wifi_raw_capture_usrp.py
requirements/: README.md  apt-requirements.txt  requirements-inference.txt  requirements-uhd.txt
results/binary_empty_vs_P5_rx/: all_model_metrics.json  config.json  dataset_summary.json  files_used.csv  quick_report.json  quick_report.md
results/binary_empty_vs_P5_rx/figures/: analysis_notes.txt
results/binary_empty_vs_P5_rx/model_rxGridSSB/: classification_report.txt  metrics.json  model.pt  train_history.csv
src/cpp/: CMakeLists.txt
src/cpp/common/: bounded_queue.hpp  feature_frame.hpp  iq_block.hpp  packet_metadata.hpp  waveform_types.hpp
src/cpp/io/: cf32_reader.cpp  cf32_reader.hpp  constellation_csv_writer.cpp  constellation_csv_writer.hpp  csi_csv_writer.cpp  csi_csv_writer.hpp  csi_raw_writer.cpp  csi_raw_writer.hpp  feature_jsonl_writer.cpp  feature_jsonl_writer.hpp  psdu_writer.cpp  psdu_writer.hpp  sc16_reader.cpp  sc16_reader.hpp
src/cpp/pipeline/: waveform_factory.cpp  waveform_factory.hpp  waveform_processor.hpp
src/cpp/publishers/: feature_json_serializer.hpp  feature_publisher.hpp  zeromq_feature_publisher.cpp  zeromq_feature_publisher.hpp
src/cpp/sources/: iq_source.hpp  uhd_iq_source.cpp  uhd_iq_source.hpp
src/cpp/waveforms/wifi_nonht/: beacon_parser.cpp  beacon_parser.hpp  channel_estimator.cpp  channel_estimator.hpp  data_decoder.cpp  data_decoder.hpp  data_symbol_extractor.cpp  data_symbol_extractor.hpp  legacy_signal_decoder.cpp  legacy_signal_decoder.hpp  packet_detector.cpp  packet_detector.hpp  synchronizer.cpp  synchronizer.hpp  wifi_fcs.cpp  wifi_fcs.hpp  wifi_nonht_processor.cpp  wifi_nonht_processor.hpp
src/matlab/: calibrate_target_ssb.m  capture_datassb_dataset_block.m  capture_datassb_dataset_block_timestamps.m  capture_datassb_fast_async.m  capture_datassb_fixedfreq_dynamictiming_fast.m  capture_datassb_fixedsync_fast.m  collect_ssb_dataset.m  detect_physical_ssb_arrivals_long_capture.m  export_datassb_hssb_dataset.m  inspect_datassb_timestamps.m  live_rxgridssb_motion_doppler_viewer.m  long_capture_ssb_motion_doppler.m  print_first_20_ssb_timestamps.m  ssb_init_receiver.m  ssb_process_capture.m  stream_rxgridssb_online_to_python.m  validate_datassb_fast_capture.m
src/matlab/wifi_sensing/: README_MATLAB_WIFI_RX.md  SDRBeaconReceiverExample_reference.mlx  capture_wifi_usrp.m  decode_wifi_beacons_offline.m  dsssCCKDemodulate.m  dsssDescramble.m  hSDRBase.m  hSDRReceiver.m  hWLANPacketDetector.m  parse_albsens_vendor_ie.m  recoverDSSSBits.m  recoverOFDMBits.m  recoverPreamble.m  run_wifi_beacon_rx.m
src/python/: build_csi_images_v3.py  build_fixedscale_images_v4.py  build_power_dataset_v2.py  build_sensing_dataset.py  evaluate_p5_signature_override.py  export_p5_signature_online_calibration.py  filter_dataset_labels.py  fold1_gridfull_knn_experiment.py  monitor_json_update_rate.py  online_rxgridssb_inference_server.py  online_rxgridssb_multiclass_p3_server.py  plot_datassb_multiclass_figures.py  plot_p3_empty_model_explainability.py  plot_p3_vs_empty_explainability.py  train_cnn_csi_v3.py  train_datassb_binary_pipeline.py  train_datassb_multiclass_rx_hybrid_roi_pipeline.py  train_datassb_multiclass_rx_pipeline.py  train_datassb_multiclass_rx_roi_pipeline.py  train_fixedscale_multiclass_models.py  train_sensing_models.py  train_ssb_power_cnn_experiments.py  visualize_ssb_dataset.py
src/python/ssb_python/: analyze_rxgrid_distributions.py  capture_iq_blocks_uhd.py  capture_online_rxgridssb_dataset.py  capture_online_rxgridssb_dataset_cfo.py  cfo_utils.py  (+13 more)
tests/regression/: check_wifi_offline_pipeline.py  run_wifi_offline_golden.sh
tests/ssb/: test_online_5g_rxgrid_jsonl_stop.py
tests/wifi/: README.md
tools/receivers/: zeromq_feature_receiver.py
(+54 files in other folders)
